log/build_2020-08-07_23-26-14/main/stderr 2.log
In file included from In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/main.cpp:2:
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/game.hppIn file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.cpp/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp::3:615:
:
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.hpp:15:2/Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:
::/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.hpp :error: 15C++ requires a type specifier for all declarations15::
2: 
error/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.hpp: :15:C++ requires a type specifier for all declarations2
: error: C++ requires a type specifier for all declarations
        main(message_info::msg::DetectionBall ball, message_info::msg::DetectionRobot robot, message_info::msg::GoalInfo goal, message_info::msg::RobotCommand & send_command); 
        main(message_info::msg::DetectionBall ball, message_info::msg::DetectionRobot robot, message_info::msg::GoalInfo goal, message_info::msg::RobotCommand & send_command);         ^

        ^
        main(message_info::msg::DetectionBall ball, message_info::msg::DetectionRobot robot, message_info::msg::GoalInfo goal, message_info::msg::RobotCommand & send_command); 
        ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.cpp:6:17: error: use of undeclared identifier 'degree_atan2'
        float degree = degree_atan2(ball.pose,robot.pose);
                       ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.cpp:7:11: error: use of undeclared identifier 'wrap_calc'
        degree = wrap_calc(degree);
                 ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:31:16: warning: unused variable 'field_width' [-Wunused-variable]
         float field_width = geometry_message->field_width;
               ^
3 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/attacker.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/main.cpp.o] Error 1
1 warning and 1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/game.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
